[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eq1-network"
version = "1.0.10"
description = "Plugin-based Communication Framework"
readme = "docs/README.md"
license = {file = "LICENSE"}
authors = [
    {name = "EQ-1 Team", email = "dev@eq1.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Topic :: Internet",
]
keywords = ["communication", "protocol", "mqtt", "network", "framework"]
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/eq1-team/eq1-network"
Documentation = "https://eq1-network.readthedocs.io"
Repository = "https://github.com/eq1-team/eq1-network.git"
Issues = "https://github.com/eq1-team/eq1-network/issues"

[project.scripts]
eq1-network = "eq1_network.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eq1_network*", "examples*", "tests*", "docs*"]

[tool.setuptools.package-data]
eq1_network = ["py.typed"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short"

[tool.coverage.run]
source = ["eq1_network"]
omit = ["*/tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]